--- a/src/_data/settings.yaml
+++ b/src/_data/settings.yaml
@@ -1,4 +1,4 @@
 ---
-name: Neat Starter
-author: Surjith S M
-url: "https://surjithctly.in/"
+name: "Crisis Pregnancy - Focus Pregnancy Help Center"
+url: "https://focusphc.com/"
+social_image_url: "FIXME"
