--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "browsersync": "browser-sync start --server _site --files _site --port 8080 --no-notify --no-open"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^1.0.0",
+    "@11ty/eleventy": "^2.0.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3",
     "@tailwindcss/typography": "^0.5.0",
     "alpinejs": "^3.7.1",
@@ -24,7 +24,9 @@
     "tailwindcss": "^3.0.13"
   },
   "dependencies": {
+    "@11ty/eleventy-plugin-webc": "^0.11.1",
     "autoprefixer": "^10.4.2",
+    "chalk": "^4",
     "postcss": "^8.4.5"
   }
 }
